--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -3,14 +3,15 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework</groupId>
+    <groupId>com.home.training</groupId>
     <artifactId>gs-multi-module</artifactId>
     <version>0.1.0</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>library</module>
-        <module>application</module>
+        <module>multi-module-library</module>
+        <module>multi-module-application</module>
+        <module>multi-module-data</module>
     </modules>
 
 </project>
